[package]
name = "merchant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
colored = "2.0.1"
cursive_buffered_backend = "0.6.1"
#ratatui = "0.21.0"
worldgen = "0.5.3"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]